# dotevalve-python-apis

./: JustEvalve.fig  ModifiedSauvola_Binarization.py  README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
src/: constants.py  core.py  entry.py  logger.py  template.py
src/processors/: CropOnMarkers.py  CropPage.py  FeatureBasedAlignment.py
src/utils/: image.py  interaction.py  validations.py
