[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | _build
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py37']

[tool.poetry]
name = "omrchecker"
version = "0.1.0"
description = ""
authors = ["udaypankhaniya33 <91246687+udaypankhaniya33@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
deepmerge = ">=1.1.0"
dotmap = ">=1.3.30"
jsonschema = ">=4.17.3"
matplotlib = ">=3.7.1"
numpy = ">=1.25.0"
pandas = ">=2.0.2"
rich = ">=13.4.2"
screeninfo = ">=0.8.1"
opencv-python = "^4.8.0.74"
opencv-contrib-python = "^4.8.0.74"
flask = "^2.3.2"
attrs = "^23.1.0"
blinker = "^1.6.2"
click = "^8.1.3"
colorama = "^0.4.6"
contourpy = "^1.1.0"
cycler = "^0.11.0"
fonttools = "^4.40.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
kiwisolver = "^1.4.4"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.3"
mdurl = "^0.1.2"
packaging = "^23.1"
pillow = "^10.0.0"
pygments = "^2.15.1"
pyparsing = "^3.1.0"
pyrsistent = "^0.19.3"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
six = "^1.16.0"
tzdata = "^2023.3"
werkzeug = "^2.3.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
